add homepage links and new pages
Co-Authored-By: Adam <31065348+adam8-9@users.noreply.github.com>
Co-Authored-By: Juliette Orpen <53294140+julietteorpen@users.noreply.github.com>
Co-Authored-By: Miah Elizabeth Bates <78933903+miahbates@users.noreply.github.com>

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,12 @@ a {
   text-decoration: none;
 }
 
+.box {
+  margin: 1rem;
+  padding: 1rem;
+  border: 1px solid black;
+}
+
 * {
   box-sizing: border-box;
 }
