Add action buttons and layout to all pages
Update links in layout, add favicon and sign-in logo plus box styling on medication form

Co-Authored-By: Adam <31065348+adam8-9@users.noreply.github.com>
Co-Authored-By: Juliette Orpen <53294140+julietteorpen@users.noreply.github.com>
Co-Authored-By: Miah Elizabeth Bates <78933903+miahbates@users.noreply.github.com>

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,12 @@ a {
   border: 1px solid black;
 }
 
+.flexbox-center-col {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+}
+
 * {
   box-sizing: border-box;
 }
