able to get medications from db and display on medication page
Co-authored-by: Adam 31065348+adam8-9@users.noreply.github.com

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,3 +26,10 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.med {
+  border: 2px black solid;
+  padding: 10px;
+  list-style: none;
+  margin: 10px;
+}
