--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@ body {
   /* #88498F; */
   --color-two: #fbad17;
   /* #779FA1; */
-  --color-three: #6641aa;
+  --color-three: #aa57a8;
   /* #E0CBA8;   */
   --color-four: #69995d;
   /* #EE964B;#FF6542;  */
@@ -61,7 +61,7 @@ a {
   width: 1.8rem;
   color: var(--color-two);
   text-align: center;
-  margin: 0 1.5rem;
+  margin: 1rem;
 }
 
 /* General spacing classes */
@@ -78,9 +78,10 @@ a {
   justify-items: center;
 }
 
-.med {
-  border: 2px black solid;
-  padding: 10px;
-  list-style: none;
-  margin: 10px;
+/* Tablet screen and above */
+@media screen and (min-width: 768px) {
+  body {
+    width: 80%;
+    margin: 0 auto;
+  }
 }
